src/test/ui/closure-expected-type/expect-two-infer-vars-supply-ty-with-bound-region.stderr
error[E0282]: type annotations needed
  --> $DIR/expect-two-infer-vars-supply-ty-with-bound-region.rs:8:27
   |
LL |     with_closure(|x: u32, y| {});
   |                           ^ consider giving this closure parameter a type
   |
help: consider specifying the type arguments in the function call
   |
LL |     with_closure::<F, A, B>(|x: u32, y| {});
   |                 ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
